# Zen-OS

./: Cargo.toml  README.md  x86_64-zen_os.json
.cargo/: config.toml
src/: main.rs
src/ai/: mod.rs
src/boot/: bootloader.rs  mod.rs  serial.rs
src/capability/: mod.rs
src/compat/: mod.rs
src/gpu/: mod.rs
src/ipc/: mod.rs
src/kernel/: allocator.rs  edge_registry.rs  interrupts.rs  lazy_pool.rs  memory.rs  mod.rs  percpu.rs
src/scheduler/: mod.rs
src/storage/: mod.rs
src/tagfs/: mod.rs
src/userspace/: mod.rs
