[package]
name = "zen-os"
version = "0.1.0"
edition = "2021"
authors = ["Zen OS Team"]

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
x86_64 = "0.15.4"
uart_16550 = "0.4.0"
pic8259 = "0.11.0"
spin = "0.10.0"
volatile = "0.6.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
arrayvec = { version = "0.7.6", default-features = false }
heapless = "0.9.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1

[[bin]]
name = "zen-os"
path = "src/main.rs"
